@@ -14,6 +14,19 @@ RUN rm -rf /home/cloudron
 RUN ln -s /app/data/global /home/cloudron
 RUN chown -R cloudron:cloudron /home/cloudron
 
+# Install Mono-Complete for .NET development
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+RUN echo "deb https://download.mono-project.com/repo/ubuntu stable-bionic main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
+RUN apt update
+RUN apt install -y mono-complete
+
+# Install PowerShell Core 6.1.3
+RUN wget https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb -O /app/code/powershell.deb
+RUN dpkg -i /app/code/powershell.deb
+RUN apt update
+RUN apt install -y powershell
+
+
 # Set permissions
 RUN chown -R cloudron:cloudron /app/data
 
